--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-# Travis Configuration for lecture-python-programming code execution tests
+# Travis Configuration for lecture-python-advanced code execution tests
 
 sudo: false
 language: python
