--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -26,7 +26,7 @@ jobs:
         with:
           repository: QuantEcon/lecture-python-advanced.theme
           token: ${{ secrets.ACTIONS_PAT }}
-          path: theme/lecture-python-advanced.advanced
+          path: theme/lecture-python-advanced.theme
       - name: Build website files
         shell: bash -l {0}
         run: | 
