--- a/environment.yml
+++ b/environment.yml
@@ -2,6 +2,7 @@ name: qe-lectures
 channels:
   - default
   - conda-forge
+  - anaconda
 dependencies:
   - pip
   - python
@@ -15,8 +16,10 @@ dependencies:
   - matplotlib
   - networkx
   - sphinx=2.4.4
+  - interpolation
+  - seaborn
   - pip:
-    - sphinxcontrib-jupyter 
-    - sphinxcontrib-bibtex 
-    - quantecon 
+    - sphinxcontrib-jupyter
+    - sphinxcontrib-bibtex
+    - quantecon
     - joblib
