--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -1,8 +1,7 @@
-name: Build Website Cache
+name: Build Website Cache (Nightly)
 on:
-  push:
-    branches:
-      - master
+  schedule:
+    - cron: '1 0 * * *'
 jobs:
   build-cache:
     name: Build Website
@@ -25,12 +24,15 @@ jobs:
           repository: QuantEcon/lecture-python-advanced.theme
           token: ${{ secrets.ACTIONS_PAT }}
           path: theme/lecture-python-advanced.theme
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
       - name: Cache Website Build Folder
         id: cache
         uses: actions/cache@v1
         with:
           path: _build
-          key: cache-sphinx
+          key: cache-sphinx-${{ steps.date.outputs.date }}
       - name: Build Website files
         shell: bash -l {0}
         run: |
