testing new release of quantecon

--- a/environment.yml
+++ b/environment.yml
@@ -20,5 +20,5 @@ dependencies:
   - pip:
     - sphinxcontrib-jupyter
     - sphinxcontrib-bibtex
-    - quantecon
+    - quantecon==0.4.8
     - joblib
