--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -44,7 +44,7 @@ jobs:
           bash scripts/build-website.sh "${{ steps.files.outputs.added_modified }}" "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
       - name: Preview Deploy to Netlify
         uses: nwtgck/actions-netlify@v1.0
-        if: $BUILD_NETLIFY == true
+        if: env.BUILD_NETLIFY == true
         with:
           publish-dir: './_build/website/jupyter_html'
           production-branch: master
