--- a/environment.yml
+++ b/environment.yml
@@ -4,19 +4,8 @@ channels:
   - conda-forge
 dependencies:
   - pip
-  - python
-  - jupyter
-  - jupyterlab
-  - nbconvert
-  - pandoc
-  - pandas
-  - numba
-  - numpy
-  - matplotlib
-  - networkx
-  - sphinx=2.4.4
-  - interpolation
-  - seaborn
+  - python=3.8
+  - anaconda=2020.07
   - pip:
     - sphinxcontrib-jupyter
     - sphinxcontrib-bibtex
