update environment name + jupinx

--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: qe-lectures
+name: lecture-python-advanced
 channels:
   - default
   - conda-forge
@@ -7,6 +7,7 @@ dependencies:
   - python=3.8
   - anaconda=2020.07
   - pip:
+    - jupinx
     - sphinxcontrib-jupyter
     - sphinxcontrib-bibtex
     - quantecon
