--- a/.github/workflows/cache.yml
+++ b/.github/workflows/cache.yml
@@ -62,7 +62,7 @@ jobs:
           miniconda-version: 'latest'
           python-version: 3.8
           environment-file: environment.yml
-          activate-environment: qe-lectures
+          activate-environment: lecture-python-advanced
       - name: Checkout QuantEcon theme
         uses: actions/checkout@v2
         with:
