--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -10,14 +10,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Setup Anaconda
-        uses: goanpeca/setup-miniconda@v1
+        uses: conda-incubator/setup-miniconda@v2
         with:
           auto-update-conda: true
           auto-activate-base: true
           miniconda-version: 'latest'
-          python-version: 3.7
+          python-version: 3.8
           environment-file: environment.yml
-          activate-environment: qe-lectures
+          activate-environment: lecture-python-advanced
       - name: Get Changed Files
         id: files
         uses: jitterbit/get-changed-files@v1
@@ -43,8 +43,8 @@ jobs:
         run: |
           bash scripts/build-website.sh "${{ steps.files.outputs.added_modified }}" "${{ github.event.pull_request.head.repo.full_name == github.repository }}"
       - name: Preview Deploy to Netlify
-        uses: nwtgck/actions-netlify@v1.0
-        if: env.BUILD_NETLIFY == 'true'
+        uses: nwtgck/actions-netlify@v1.1
+        if: env.BUILD_NETLIFY == 'true' && github.event.pull_request.head.repo.full_name == github.repository
         with:
           publish-dir: './_build/website/jupyter_html'
           production-branch: master
